Validate all user input on the backend using strict allowlists to prevent SQL injection, Cross-Site Scripting (XSS), and command injection.