@@ -1,6 +1,8 @@
 package pl.labgeneral.ai.service;
 
 import lombok.RequiredArgsConstructor;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 import org.springframework.web.reactive.function.client.WebClient;
 
@@ -12,14 +14,11 @@ import java.util.List;
 @RequiredArgsConstructor
 public class RetrievalService {
 
+    private static final Logger log = LoggerFactory.getLogger(RetrievalService.class);
+
     private final WebClient ragWebClient;
 
     public List<RetrievedChunk> retrieveRelevantChunks(String question, int topK) {
-
-        System.out.println("=== RAG REQUEST ===");
-        System.out.println("Question: " + question);
-        System.out.println("TopK: " + topK);
-
         try {
             SearchRequest request = new SearchRequest(question, topK);
 
@@ -28,24 +27,14 @@ public class RetrievalService {
                     .bodyValue(request)
                     .retrieve()
                     .bodyToMono(RetrievedChunk[].class)
-                    .timeout(Duration.ofSeconds(30))
+                    .timeout(Duration.ofSeconds(10))
                     .block();
 
-            System.out.println("=== RAG RESULT ===");
-            System.out.println("Chunks: " + (response == null ? 0 : response.length));
-
-            return response == null
-                    ? List.of()
-                    : Arrays.asList(response);
+            return response == null ? List.of() : Arrays.asList(response);
 
         } catch (Exception e) {
-
-            System.out.println("=== RAG ERROR ===");
-            System.out.println("Error class: " + e.getClass().getName());
-            System.out.println("Error message: " + e.getMessage());
-            e.printStackTrace();
-
-            throw e;
+            log.warn("Usługa RAG niedostępna, kontynuuję bez kontekstu: {}", e.getMessage());
+            return List.of();
         }
     }
 
